--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -104,6 +104,10 @@
     border-bottom: 1px solid #dcdcdc;
     display: block;
     margin-bottom: 3px;
+
+    @include mq($until: tablet) {
+        margin-top: 30px;
+    }
 }
 
 .coal-carto-title {
@@ -117,19 +121,29 @@
 }
 
 .coal-carto-box {
-    stroke: #dcdcdc;
+    stroke: white;
+    stroke-width: 1.5;
     fill: none;
 }
 
+
+.coal-carto-y {
+    @include fs-textSans(2);
+    fill: #767676;
+
+    &.coal-carto-y--right {
+        text-anchor: end;
+    }
+}
+
+
 .coal-carto-line {
-    stroke-width: 2;
-    fill: #121212;
-    stroke: none;
+    stroke: white;
+    stroke-width: 0.75;
 }
 
 .coal-carto-area {
-    stroke: white;
-    stroke-width: 0.75;
+    stroke: none;
 }
 
 .coal-carto-y {
@@ -155,11 +169,16 @@
 .coal-country-label {
     @include fs-textSans(2);
     fill: white;
-    stroke: #121212;
-    stroke-width: 3;
-    paint-order: stroke;
-    stroke-opacity: 0.7;
     text-anchor: middle;
+
+    &.coal-country-label--white {
+
+        fill: none;
+        stroke: #121212;
+        stroke-width: 3;
+        paint-order: stroke;
+        stroke-opacity: 0.6;
+    }
 }
 
 .coal-key__label {
@@ -214,4 +233,8 @@
     color: #767676;
     @include fs-textSans(2);
     margin-bottom: 12px;
+}
+
+.coal-empty-div {
+    display: none;
 }
